// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-comments-field Renders \`pbehavior-comments-field\` with custom props 1`] = `
<div>
  <pbehavior-comment-field-stub
    comment="[object Object]"
    max="255"
  />
  <pbehavior-comment-field-stub
    comment="[object Object]"
    max="255"
  />
  <div
    class="layout"
  >
    <button
      class="ml-0 primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Add comment
      </span>
    </button>
  </div>
</div>
`;

exports[`pbehavior-comments-field Renders \`pbehavior-comments-field\` with default props 1`] = `
<div>
  <div
    class="layout"
  >
    <button
      class="ml-0 primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Add comment
      </span>
    </button>
  </div>
</div>
`;
